--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/jsp/background/main/bgIndexHead.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/background/main/bgIndexLeft.jsp=UTF-8
+encoding//WebContent/WEB-INF/jsp/background/maple/bgMapleList.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/background/user/bgUserList.jsp=UTF-8
