--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<param-value>
 			classpath:spring/ApplicationContext-head.xml,
 			classpath:spring/ApplicationContext-dataSource.xml,
+			classpath:spring/ApplicationContext-log4j.xml,
 			classpath:spring/ApplicationContext-shiro.xml,
 			classpath:spring/ApplicationContext-redis.xml
 		</param-value>
@@ -17,6 +18,20 @@
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j.properties</param-value>
 	</context-param>
+	
+	<context-param>  
+        <param-name>spring.profiles.active</param-name>  
+        <param-value>dev</param-value>  
+    </context-param>  
+    <context-param>  
+        <param-name>spring.profiles.default</param-name>  
+        <param-value>dev</param-value>  
+    </context-param>  
+    <context-param>  
+        <param-name>spring.liveBeansView.mbeanDomain</param-name>  
+        <param-value>dev</param-value>  
+    </context-param> 
+    
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
