--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,8 @@
 		<param-value>
 			classpath:spring/ApplicationContext-head.xml,
 			classpath:spring/ApplicationContext-dataSource.xml,
-			classpath:spring/ApplicationContext-shiro.xml,
+			<!-- classpath:spring/ApplicationContext-shiro.xml, -->
+			classpath:spring/ApplicationContext-shiro-wx.xml,
 			classpath:spring/ApplicationContext-redis.xml
 		</param-value>
 	</context-param>
