啊实打实的

--- a/.project
+++ b/.project
@@ -11,8 +11,8 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/org.eclipse.wst.jsdt.core.javascriptValidator.launch</value>
-				</dictionary>
+					<!-- <value>&lt;project&gt;/.externalToolBuilders/org.eclipse.wst.jsdt.core.javascriptValidator.launch</value>
+				 --></dictionary>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
@@ -36,6 +36,6 @@
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
+		<!-- <nature>org.eclipse.wst.jsdt.core.jsNature</nature> -->
 	</natures>
 </projectDescription>
